# Draw2Cut

./: .gitignore  QRcode_localization.py  README.md  ScreenCamera_2024-07-22-16-23-05.json  cutPreview.py  cut_points.npz  cut_preview.py  find_standard_plane.py  flasktest.py  get_trajectory_Gcode.py  index.html  main.py  package-lock.json  player.py  pyproject.toml  robots.txt  separate_wood_surface.py  sitemap.xml
9circles/: cut_points.npz  left_bottom_point.npz  output.gcode.tap  points_transformed.npz
configs/: case_config.yaml  load_config.py
cutwood/: pyvenv.cfg
cutwood/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  read_zbar.py
images_board/: left_bottom_point.npz  output.gcode.tap  output_test.gcode.tap  points_transformed.npz
init_visualization/: data_usability_check.py  visualize_3D.py  visualize_3D_animate.py
interface/: DEV_GUIDE.md  capture.py  gui.py  main.py
interface/functions/: capture_thread.py  centerline_thread.py  gui_mixins.py  mask_extract_thread.py  trajectory_thread.py  (+1 more)
no_interface_codes/: get_trajectory_Gcode.py  separate_wood_surface.py
point-cloud-visualization/: README.md  flasktest.py  package-lock.json  package.json
realsense/: continuous_extract.py  realtime_capture_multi_frame.py  realtime_capture_vis.py
realsense_extraction/: realtime_capture_vis.py
templates/: index.html  index2.html
utils/: extract_mask.py  find_centerline_groups.py  get_bulk_trajectory.py  mark_config.py  traj_to_Gcode.py
visualization/: QRcode_localization.py  find_standard_plane.py  init_pointcloud_visualize_3D.py
(+29 files in other folders)
