[tool.poetry]
name = "woodcut"
version = "0.1.0"
description = ""
authors = ["Atara <dingxia1995@gmail.com>"]
readme = "README.md"
packages = [
    { include = "utils"},
]

[tool.poetry.dependencies]
python = "^3.10"
scikit-image = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
