[tool.poetry]
name = "woodcut"
version = "0.1.0"
description = ""
authors = ["Atara <dingxia1995@gmail.com>"]
readme = "README.md"
packages = [
    { include = "utils" },
    { include = "mark", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
scikit-image = "^0.22.0"
opencv-python = "^4.10.0.84"
open3d = "^0.18.0"
pyzbar = "^0.1.9"
scikit-learn = "^1.5.0"
pyyaml = "^6.0.1"
addict = "^2.4.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
numpy = "^1.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
